hphp/test/zend/good/zend-generators-errors/resume_running_generator_error.php
<?php

function gen() {
    $gen = yield;
    $gen->next();
}

$gen = gen();
$gen->send($gen);
$gen->next();

?>